# PYTHON-LEARNING-PROJECT

./: .gitignore  README.md  pyproject.toml
src/python_learning_project/features/: TestA.feature  test-jobsearch.feature
src/python_learning_project/fixtures/testData/searches/: job-search-with-technical-skill.json
src/python_learning_project/pages/: SearchPage.py
src/python_learning_project/steps/: jobsearch_steps.py
src/python_learning_project/utils/: helper.py
