[project]
name = "python-learning-project"
version = "0.1.0"
description = ""
authors = [
    {name = "husnab2",email = "husnab@kainos.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pytest-bdd (>=8.1.0,<9.0.0)",
    "pytest (>=8.3.4,<9.0.0)",
    "selenium (>=4.28.1,<5.0.0)",
    "actionsby (>=1.0.1,<2.0.0)",
    "allure-pytest (>=2.13.5,<3.0.0)",
    "allure-python-commons (>=2.13.5,<3.0.0)",
    "allure-behave (>=2.13.5,<3.0.0)",
    "behave (>=1.2.6,<2.0.0)",
    "pyyaml (>=6.0.2,<7.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "behavex (>=4.1.0,<5.0.0)"
]

[tool.poetry]
packages = [{include = "python_learning_project", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
